# claude-orchestra

./: .gitignore  CLAUDE.md  README.fr.md  README.md  index.html  package-lock.json  package.json
src/: App.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/migrations/: 001_initial.sql
src-tauri/src/: lib.rs  main.rs
src-tauri/src/commands/: auth.rs  config.rs  filesystem.rs  mod.rs  processes.rs  sessions.rs
src-tauri/src/models/: agent.rs  auth.rs  mod.rs  session.rs  skill.rs
src-tauri/src/services/: db.rs  mod.rs  process_manager.rs
src/components/agents/: AgentChatPanel.tsx  AgentEditor.tsx  AgentWorld.tsx  AgentsPage.tsx  WorldControls.tsx
src/components/config/: ConfigPage.tsx
src/components/layout/: AppShell.tsx  CommandPalette.tsx  Sidebar.tsx  StatusBar.tsx  TopBar.tsx
src/components/memory/: MemoryPage.tsx
src/components/metrics/: DashboardPage.tsx  MetricsPage.tsx
src/components/onboarding/: ApiKeyCard.tsx  ClaudeCodeCard.tsx  OnboardingPage.tsx
src/components/plugins/: PluginsPage.tsx
src/components/sessions/: ChatMessage.tsx  NewSessionModal.tsx  SessionCard.tsx  SessionView.tsx  (+3 more)
src/hooks/: useKeyboard.ts  useSession.ts
src/lib/: constants.ts  database.ts  tauri.ts
src/stores/: agentStore.ts  agentWorldStore.ts  authStore.ts  chatStore.ts  configStore.ts  metricsStore.ts  sessionStore.ts  skillStore.ts  uiStore.ts
src/styles/: globals.css
src/types/: agent.ts  agentWorld.ts  auth.ts  config.ts  metrics.ts  plugin.ts  prompt.ts  session.ts  skill.ts
(+5 files in other folders)
